fixed .location responsive alignment and w3c validation for all html files

--- a/src/main.scss
+++ b/src/main.scss
@@ -228,15 +228,6 @@ main {
       }
     }
   }
-
-  #contact-section .contact-form {
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
-  #contact-section .submit {
-    width: 60%;
-  }
 }
 
 $secondary-color: #eece1a;
@@ -506,7 +497,7 @@ $secondary-color: #eece1a;
 
 //Contact Form
 
-#contact-section {
+section#contact-section {
   background: $primary-color;
   background-size: cover;
   background-position: center;
@@ -554,31 +545,36 @@ $secondary-color: #eece1a;
   .contact-form {
     display: grid;
     grid-template-columns: auto auto;
-    #contact-hover {
-      font-size: 16px;
-      font-style: italic;
-      width: 80%;
-      letter-spacing: 2px;
-      &:hover {
-        cursor: pointer;
-        color: white;
-      }
-      i.fa {
-        font-size: 22px;
-        padding: 3%;
-        background-color: none;
-        border-radius: 80%;
-        margin: 2%;
 
-        cursor: pointer;
-        border: 2px solid;
+    .location {
+      font-size: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .contact-hover {
+        font-style: italic;
+        width: 80%;
+        letter-spacing: 2px;
+        &:hover {
+          cursor: pointer;
+          color: white;
+        }
+        i.fa {
+          padding: 3%;
+          background-color: none;
+          border-radius: 80%;
+          margin: 2%;
+
+          cursor: pointer;
+          border: 2px solid;
+        }
       }
     }
   }
 
   input {
     padding: 10px;
-    margin: 10px;
+    margin: 5px;
     width: 80%;
     background-color: rgba(136, 133, 133, 0.5);
     color: $secondary-color;
@@ -588,7 +584,7 @@ $secondary-color: #eece1a;
 
   textarea {
     padding: 10px;
-    margin: 10px;
+    margin: 5px;
     width: 80%;
     background-color: rgba(136, 133, 133, 0.5);
     color: $secondary-color;
@@ -598,19 +594,16 @@ $secondary-color: #eece1a;
 
   .submit {
     width: 40%;
+    margin-top: 10px;
     background: none;
     padding: 4px;
     outline: none;
-    /* border: 1px solid #fff;
-      color: #fff; */
-    font-size: 13px;
     font-weight: bold;
     letter-spacing: 2px;
     height: 33px;
     text-align: center;
     cursor: pointer;
     letter-spacing: 2px;
-    margin-left: 3%;
     border: 2px solid $secondary-color;
     color: $secondary-color;
 
@@ -625,8 +618,12 @@ $secondary-color: #eece1a;
 // Responsive for Contact Form
 
 @media all and (max-width: 766px) {
-  #contact-section {
+  section#contact-section {
     height: 100%;
+    margin: 0;
+
+    border: none;
+    letter-spacing: none;
     ul.menu-nav,
     div.menu-branding {
       width: 100%;
@@ -638,7 +635,6 @@ $secondary-color: #eece1a;
     .menu-nav {
       height: 75vh;
       transform: translate3d(-100%, 0, 0);
-      font-size: 25px;
     }
     .menu-branding {
       height: 25vh;
@@ -664,8 +660,8 @@ $secondary-color: #eece1a;
           text-align: center;
           text-decoration: underline;
           text-underline-position: under;
-          font-size: 15px;
-          letter-spacing: 1.5px;
+
+          letter-spacing: 0;
           padding-bottom: 0%;
         }
       }
@@ -673,28 +669,25 @@ $secondary-color: #eece1a;
       .contact-form {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        font-size: 7px;
+        justify-content: space-around;
+
         width: 100%;
         height: 100%;
         .location {
-          height: 40%;
-
-          #contact-hover {
+          .contact-hover {
             width: 100%;
-            padding-left: 10%;
-            text-align: left;
-            font-size: 5px;
-            span.form-info {
-              font-size: 3vw;
-            }
+            padding-left: 0%;
+            max-width: 80%;
+            margin: auto;
+
+            letter-spacing: 0;
           }
         }
         .message {
           form {
-            height: 60%;
+            text-align: center;
             input {
-              margin: 0;
+              margin: 10px 0;
             }
           }
         }
